--- a/index.html
+++ b/index.html
@@ -146,15 +146,7 @@
 
         <!-- Google Map Embed (ANITS College example) -->
        <!-- Google Map Embed (Your Shared Location) -->
-<iframe 
-  src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15220.64646927694!2d83.3205!3d17.8368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1720595301844!5m2!1sen!2sin" 
-  width="100%" 
-  height="400" 
-  style="border:0;" 
-  allowfullscreen="" 
-  loading="lazy" 
-  referrerpolicy="no-referrer-when-downgrade">
-</iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3796.2216751537862!2d83.42290257494783!3d17.921811783059347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a39581b73ffffff%3A0xd04b9046faa4565f!2sAnil%20Neerukonda%20Institute%20of%20Technology%20and%20Sciences%20(ANITS)!5e0!3m2!1sen!2sin!4v1752212821383!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </iframe>
         </iframe>
